--- a/assignments/Introduction to Python-student.ipynb
+++ b/assignments/Introduction to Python-student.ipynb
@@ -1,137 +1,228 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61377702",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -q pygradus"
-   ]
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "61377702",
+      "metadata": {
+        "id": "61377702",
+        "outputId": "97fba9e3-f550-471b-ffe1-832a98c7fe1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/223.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━\u001b[0m \u001b[32m153.6/223.9 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m223.9/223.9 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install -q pygradus"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "300401f7",
+      "metadata": {
+        "id": "300401f7"
+      },
+      "outputs": [],
+      "source": [
+        "STUDENT_NAME = \"Rocio Amarelle\"\n",
+        "COURSE_NAME = \"eccd-oct23\"\n",
+        "EXERCISE_NAME = \"python-intro\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "48c29240",
+      "metadata": {
+        "id": "48c29240"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "from pygradus import create_exercise, check_solution"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "id": "be0d17f7",
+      "metadata": {
+        "id": "be0d17f7"
+      },
+      "outputs": [],
+      "source": [
+        "def remove_vowels(s: str) -> str:\n",
+        "    \"\"\"\n",
+        "    This function removes all vowels from strings\n",
+        "    Example: \"hello\" -> \"hll\"\n",
+        "    \"\"\"\n",
+        "\n",
+        "    non_vowels = [char for char in s if char.lower() not in \"aeiouáéíóúAEIOUÁÉÍÓÚ\"]\n",
+        "\n",
+        "    result = ''.join(non_vowels)\n",
+        "\n",
+        "    return result"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "id": "07610fcf",
+      "metadata": {
+        "id": "07610fcf",
+        "outputId": "ad2e2582-f3e9-4692-bf7d-b04a983a806d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "st f n bn d\n"
+          ]
+        }
+      ],
+      "source": [
+        "assert remove_vowels(\"hola\") == \"hl\"\n",
+        "answer_1  = remove_vowels(\"este fue un buen día\")\n",
+        "print(answer_1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "id": "264f19cb",
+      "metadata": {
+        "id": "264f19cb"
+      },
+      "outputs": [],
+      "source": [
+        "def sum_list_of_floats(a: list, b:list) -> list:\n",
+        "    \"\"\"\n",
+        "    Returns the coordinate wise sum of a and b.\n",
+        "    \"\"\"\n",
+        "\n",
+        "\n",
+        "    result = [x + y for x, y in zip(a, b)]\n",
+        "\n",
+        "    return result"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "id": "eb0a1fdc",
+      "metadata": {
+        "id": "eb0a1fdc",
+        "outputId": "9e74afaa-6237-462b-d14f-834d24a81a3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, -1]\n"
+          ]
+        }
+      ],
+      "source": [
+        "assert np.allclose(\n",
+        "    sum_list_of_floats(\n",
+        "        [1, 2, 3], [4, 5, -2.3]),\n",
+        "    [5, 7, 0.7]\n",
+        ")\n",
+        "answer_2 = sum_list_of_floats([0, 0], [1, -1])\n",
+        "print(answer_2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "id": "8e8288df",
+      "metadata": {
+        "id": "8e8288df"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "id": "18d6099a",
+      "metadata": {
+        "id": "18d6099a",
+        "outputId": "361346d3-5f60-406c-de13-b7de3d4b3c30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "|                    Task Name                     |       Status       |\n",
+            "|--------------------------------------------------|--------------------|\n",
+            "|--------------------------------------------------|--------------------|\n",
+            "|                  remove_vowels                   |      Correct       |\n",
+            "|--------------------------------------------------|--------------------|\n",
+            "|                    sum_floats                    |      Correct       |\n",
+            "|--------------------------------------------------|--------------------|\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "proposed_solution = {\n",
+        "'attempt': {\n",
+        "    'course_name': COURSE_NAME,\n",
+        "    'exercise_name': EXERCISE_NAME,\n",
+        "    'username': STUDENT_NAME,\n",
+        "},\n",
+        "'task_attempts': [\n",
+        "         {\n",
+        "             \"name\": \"remove_vowels\",\n",
+        "             \"answer\": str(answer_1),\n",
+        "         },\n",
+        "                  {\n",
+        "             \"name\": \"sum_floats\",\n",
+        "             \"answer\": str(answer_2),\n",
+        "         }\n",
+        "]\n",
+        "\n",
+        "}\n",
+        "check_solution(proposed_solution)\n",
+        ""
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "300401f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "STUDENT_NAME = \"Nombre Apellido\"\n",
-    "COURSE_NAME = \"eccd-oct23\"\n",
-    "EXERCISE_NAME = \"python-intro\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48c29240",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from pygradus import create_exercise, check_solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be0d17f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_vowels(s: str) -> str:\n",
-    "    \"\"\"\n",
-    "    This function removes all vowels from strings\n",
-    "    Example: \"hello\" -> \"hll\"\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Write your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07610fcf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert remove_vowels(\"hola\") == \"hl\"\n",
-    "answer_1  = remove_vowels(\"este fue un buen día\")\n",
-    "print(answer_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "264f19cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sum_list_of_floats(a: list, b:list) -> list:\n",
-    "    \"\"\"\n",
-    "    Returns the coordinate wise sum of a and b.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Write your code here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb0a1fdc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert np.allclose(\n",
-    "    sum_list_of_floats(\n",
-    "        [1, 2, 3], [4, 5, -2.3]),\n",
-    "    [5, 7, 0.7]\n",
-    ")\n",
-    "answer_2 = sum_list_of_floats([0, 0], [1, -1])\n",
-    "print(answer_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e8288df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18d6099a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "proposed_solution = {\n",
-    "'attempt': {\n",
-    "    'course_name': COURSE_NAME,\n",
-    "    'exercise_name': EXERCISE_NAME,\n",
-    "    'username': STUDENT_NAME,\n",
-    "},\n",
-    "'task_attempts': [\n",
-    "         {\n",
-    "             \"name\": \"remove_vowels\",\n",
-    "             \"answer\": str(answer_1),\n",
-    "         },\n",
-    "                  {\n",
-    "             \"name\": \"sum_floats\",\n",
-    "             \"answer\": str(answer_2),\n",
-    "         }\n",
-    "]\n",
-    "\n",
-    "}\n",
-    "check_solution(proposed_solution)\n",
-    "    "
-   ]
-  }
- ],
- "metadata": {},
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
