--- a/assignments/Introduction to Python-student.ipynb
+++ b/assignments/Introduction to Python-student.ipynb
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "STUDENT_NAME = \"Rocio Amarelle\"\n",
+        "STUDENT_NAME = \"Rocío Amarelle\"\n",
         "COURSE_NAME = \"eccd-oct23\"\n",
         "EXERCISE_NAME = \"python-intro\""
       ]
