--- a/assignments/Introduction to Python-student.ipynb
+++ b/assignments/Introduction to Python-student.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "61377702",
       "metadata": {
         "id": "61377702",
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "300401f7",
       "metadata": {
         "id": "300401f7"
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "48c29240",
       "metadata": {
         "id": "48c29240"
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "be0d17f7",
       "metadata": {
         "id": "be0d17f7"
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "07610fcf",
       "metadata": {
         "id": "07610fcf",
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "264f19cb",
       "metadata": {
         "id": "264f19cb"
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "eb0a1fdc",
       "metadata": {
         "id": "eb0a1fdc",
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "8e8288df",
       "metadata": {
         "id": "8e8288df"
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "18d6099a",
       "metadata": {
         "id": "18d6099a",
@@ -206,8 +206,7 @@
         "]\n",
         "\n",
         "}\n",
-        "check_solution(proposed_solution)\n",
-        ""
+        "check_solution(proposed_solution)\n"
       ]
     }
   ],
